--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
+    "build": "tsc --skipLibCheck --noEmitOnError false",
     "start": "node dist/index.js"
   },
   "keywords": [],
